--- a/Node/package.json
+++ b/Node/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "node-pre-gyp": "^0.14.0",
     "router": "^1.3.3",
